@@ -14,8 +14,10 @@ importFrom("quadprog", "solve.QP")
 importFrom("grDevices", "rgb")
 importFrom("graphics", "axis", "box", "lines", "plot")
 importFrom("methods", "as")
+importFrom("survival", "Surv")
 
-export(R, "coef<-", mlt, ctm, confband, Hessian, Gradient, as.mlt, mltoptim)
+export(R, "coef<-", mlt, ctm, confband, Hessian, Gradient, as.mlt, 
+       mltoptim, as.Surv)
 #, paraboot, description
 # Hmlt dmlt, hmlt, pmlt, qmlt, smlt, tmlt
 
@@ -42,6 +44,8 @@ S3method("R", "ordered")
 S3method("R", "numeric")
 S3method("R", "integer")
 S3method("R", "interval")
+S3method("R", "list")
+S3method("R", "response")
 S3method("print", "response")
 S3method("bounds", "mlt")
 S3method("bounds", "ctm")
@@ -57,6 +61,8 @@ S3method("Hessian", "mlt")
 S3method("Gradient", "mlt")
 
 S3method("as.mlt", "mlt")
+
+S3method("as.Surv", "response")
 
 #S3method("model.matrix", "mlt")
 #S3method("paraboot", "mlt")
